--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
                             "src/styles/index.scss"
                         ],
                         "scripts": [
-                            "node_modules/sigma/build/sigma.min.js"
+                            "node_modules/cytoscape/dist/cytoscape.min.js",
+                            "node_modules/jquery/dist/jquery.min.js"
+                            
                         ],
                         "es5BrowserSupport": true
                     },
