--- a/angular.json
+++ b/angular.json
@@ -37,11 +37,7 @@
                             "node_modules/bootstrap/scss/bootstrap.scss",
                             "src/styles/index.scss"
                         ],
-                        "scripts": [
-                            "node_modules/cytoscape/dist/cytoscape.min.js",
-                            "node_modules/jquery/dist/jquery.min.js"
-                            
-                        ],
+                        "scripts": [],
                         "es5BrowserSupport": true
                     },
                     "configurations": {
