--- a/package.json
+++ b/package.json
@@ -29,26 +29,24 @@
         "angular-svg-icon": "^7.2.1",
         "bootstrap": "^4.4.1",
         "browser-locale": "^1.0.3",
-        "codice-fiscale-js": "^2.2.4",
         "core-js": "^2.6.11",
         "d3": "^5.16.0",
-        "google-libphonenumber": "^3.2.6",
+        "google-libphonenumber": "^3.2.9",
         "leaflet": "^1.6.0",
-        "moment": "^2.24.0",
-        "ngx-color": "^4.1.0",
+        "moment": "^2.25.3",
+        "ngx-color": "^4.1.1",
         "ngx-infinite-scroll": "^7.2.0",
         "ngx-international-phone-number": "^1.0.6",
         "ngx-moment": "^3.5.0",
         "ngx-responsive": "^7.0.1",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "rxjs": "~6.3.3",
-        "sigma": "^2.0.0-alpha32",
-        "tslib": "^1.10.0",
+        "tslib": "^1.11.2",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.9",
-        "@angular/cli": "^7.3.9",
+        "@angular-devkit/build-angular": "^0.13.10",
+        "@angular/cli": "^7.3.10",
         "@angular/compiler-cli": "^7.2.16",
         "@angular/language-service": "^7.2.16",
         "@types/jasmine": "~2.8.8",
@@ -62,7 +60,7 @@
         "karma-coverage-istanbul-reporter": "^2.1.1",
         "karma-jasmine": "~1.1.2",
         "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.4.0",
+        "protractor": "^5.4.4",
         "ts-node": "~7.0.0",
         "tsconfig-paths": "^3.9.0",
         "tslint": "~5.11.0",
