--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install angular-cli
-      run: npm install angular-cli
+      run: npm install -g @angular/cli
     - name: npm install
       run: npm install --dev
     - name: Angular build for production
