--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,24 +13,22 @@ jobs:
       - uses: actions/checkout@v2
         name: Check out code
       
-      - name: Build Docker Controller image
+      - name: Build Docker image
         if: ${{ github.event_name == 'pull_request'}}
         uses: zvfvrv/docker-bpgpr@v1.0.1
         with:
           gh_token: ${{ secrets.TOKEN_GITHUB }}
           image_name: rose-dashboard
           tags: latest,beta
-          tag_with_ref: true
           tag_with_sha: true
-          push: true
+          push: false
 
-      - name: Build and Publish Docker Controller image
+      - name: Build and Publish Docker image
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master'}}
         uses: zvfvrv/docker-bpgpr@v1.0.1
         with:
           gh_token: ${{ secrets.TOKEN_GITHUB }}
           image_name: rose-dashboard
           tags: latest,beta
-          tag_with_ref: true
           tag_with_sha: true
           push: true
