--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Check out code
-      
+
       - name: Build Docker image
         if: ${{ github.event_name == 'pull_request'}}
         uses: zvfvrv/docker-bpgpr@v1.0.1
@@ -32,3 +32,13 @@ jobs:
           tags: latest,beta
           tag_with_sha: true
           push: true
+
+      - name: Build and Publish Docker image DockerHub
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master'}}
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: rosesrv6/rose-dashboard
+          tag_with_ref: true
+          tags: latest,beta
